@@ -1,3 +1,6 @@
+devel
++ don't move the binary if BIN_DIR is empty
+
 devel-20110331
 + adjust copyright years to 2011
 + lots of code clean-up
